sourceCompatibility = "1.8"
targetCompatibility = "1.8"

clean {
	ext {
		cleanDeployed = false
	}
}

dependencies {
	compileOnly group: "org.apache.ant", name: "ant", transitive: false, version: "1.10.14"
	testImplementation group: "org.apache.ant", name: "ant", transitive: false, version: "1.10.14"
}

liferay {
	deployDir = file("../../../lib/development")
}

test {
	jvmArgs "--add-opens", "java.base/java.util=ALL-UNNAMED"
}

updateFileVersions {
	match(/\t\t<dependency name="com.liferay.ant.mirrors.get" org="com.liferay" rev="(\d.+)" \/>/, "../../../tools/sdk/dependencies/com.liferay.ant.mirrors.get/ivy.xml")
}